log
Tue, Mar 25, 2025 12:05:36 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Tue, Mar 25, 2025 12:38:20 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a2fc200
Tue, Mar 25, 2025 12:50:23 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
728043c
Tue, Mar 25, 2025  1:06:00 PM: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2be4846
Tue, Mar 25, 2025  1:06:45 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
163e938
Tue, Mar 25, 2025  1:11:26 PM: 
 list.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
76e6a2f
Tue, Mar 25, 2025  1:13:25 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
3d3510e
Tue, Mar 25, 2025  1:17:10 PM: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|0
9dfb0c1
Tue, Mar 25, 2025  2:31:48 PM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2e53099
Tue, Mar 25, 2025  2:32:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
215b8d0
Tue, Mar 25, 2025  2:34:59 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
699bd5e
Tue, Mar 25, 2025  2:54:09 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:92:5: error: 'pene' undeclared (first use in this function)
     pene
     ^~~~
list.c:92:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:93:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
ba90abf
Tue, Mar 25, 2025  2:55:09 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
dce4f8a
